

2004/08/29: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- adapted mklistdoc to new macro names


2004/08/27: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- BufferedIO: Added function GWEN_BufferedIO_WriteRawForced


2004-08-24   Christian Stimming <stimming@tuhh.de>

	* gwenhywfar.iss.in: Add spec file for the Inno Setup Compiler
	which will create a Windows Setup.exe program for the whole
	package, see http://www.jrsoftware.org/isdl.php. Added "make
	setup" for this target.


2004-08-23   Christian Stimming <stimming@tuhh.de>

	* src/os/gwentime.h: Include time.h.
	
	* src/base/debug.h: Adapted the non-variadic-macro function
	declarations to the change from GWEN_LOGGER to const char*
	logdomain.
	
	* src/base/stringlist.h: Add GWEN_StringList_ForEach function.


2004/08/23: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added statistical functions to GWEN_BufferedIo
- changed GWEN_Time_To_time_t -> GWEN_Time_toTime_t 
  and GWEN_Time_To_tm -> GWEN_Time_toTm to adhere (that's how the other
  converter functions are called throughout the library)


2004-08-21  Christian Stimming  <stimming@tuhh.de>

	* src/os/gwentime.h: Add conversion functions GWEN_Time_To_tm and
	GWEN_Time_To_time_t.


2004/08/20: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- introduced logdomains: Now every library can have its own log domain,
  making it much easier to debug a single library out of multiple libs
  NOTE: This is an incompatible API change, therefore SO_VERSION++.
  The first argument of all GWEN_Logger functions has been changed.
  However, in most cases a NULL was given, so you should simply need to
  recompile your sources with no (or at most few) changes.
- prepared gwen for gettext
- added simplified error codes to GWEN_Error, will get away from that